--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -3,10 +3,9 @@
 
     <div>
       <h2 class="fw-light text-center p-2 m-4">
-        Welcome to our dynamic blogging platform! Explore curated content
-        crafted with finesse and flair. Dive into a world where words dazzle and
-        ideas inspire. Join us on a journey of enlightenment and entertainment.
-        Welcome to your new virtual haven!
+        Welcome to our dynamic news platform! Explore curated content delivered with
+    finesse and flair, where information dazzles and ideas inspire. Join us on a
+    journey of enlightenment and current events in your new virtual haven!
       </h2>
     
       <div class=" d-flex align-items-center p-3  flex-wrap">
@@ -22,7 +21,7 @@
         "style="width: 350px; height: 350px;" class=" m-3" >
         <img src="https://images.unsplash.com/photo-1535223289827-42f1e9919769?q=80&w=1374&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
         " style="width: 350px; height: 350px;" class=" m-3">
-        <img src="https://images.unsplash.com/photo-1502920514313-52581002a659?q=80&w=1467&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D  " style="width: 350px; height: 350px;" class=" m-3" >
+        
       </div>
     
   </div>
