--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -8,7 +8,7 @@
     journey of enlightenment and current events in your new virtual haven!
       </h2>
     
-      <div class=" d-flex align-items-center p-3  flex-wrap">
+      <div class=" d-flex align-items-center p-3  ">
         <img src="https://images.unsplash.com/photo-1598899134739-24c46f58b8c0?q=80&w=1456&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
         " style="width: 350px; height: 350px;"  class=" m-3" >
         <img src=" https://images.unsplash.com/photo-1628771065518-0d82f1938462?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
