--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -8,36 +8,30 @@
     journey of enlightenment and current events in your new virtual haven!
       </h2>
     
-      <div class="row">
-        <div class="col">
-        <img src="https://images.unsplash.com/photo-1598899134739-24c46f58b8c0?q=80&w=1456&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
-        " style="width: 350px; height: 350px;"  class=" m-3" >
-        </div>
-<div class="col">
-        <img src=" https://images.unsplash.com/photo-1628771065518-0d82f1938462?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
-        "style="width: 350px; height: 350px;" class=" m-3" >
+   <div class="container">
+  <div class="row">
+    <div class="col-md-4">
+      <img src="https://images.unsplash.com/photo-1598899134739-24c46f58b8c0?q=80&w=1456&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" style="width: 100%; height: 350px;" class="m-3">
     </div>
-<div class="col">
-        <img src="https://images.unsplash.com/photo-1541534741688-6078c6bfb5c5?q=80&w=1469&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
-        "style="width: 350px; height: 350px;" class=" m-3" >
-      </div>
+    <div class="col-md-4">
+      <img src="https://images.unsplash.com/photo-1628771065518-0d82f1938462?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" style="width: 100%; height: 350px;" class="m-3">
+    </div>
+    <div class="col-md-4">
+      <img src="https://images.unsplash.com/photo-1541534741688-6078c6bfb5c5?q=80&w=1469&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" style="width: 100%; height: 350px;" class="m-3">
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-4">
+      <img src="https://images.unsplash.com/photo-1612550761236-e813928f7271?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" style="width: 100%; height: 350px;" class="m-3">
+    </div>
+    <div class="col-md-4">
+      <img src="https://plus.unsplash.com/premium_photo-1661374909989-d653eaa4f62d?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" style="width: 100%; height: 350px;" class="m-3">
+    </div>
+    <div class="col-md-4">
+      <img src="https://images.unsplash.com/photo-1535223289827-42f1e9919769?q=80&w=1374&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" style="width: 100%; height: 350px;" class="m-3">
+    </div>
+  </div>
 </div>
-    <div class="row">
-        <div class="col">
-            <img src="https://images.unsplash.com/photo-1612550761236-e813928f7271?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
-            "style="width: 350px; height: 350px;" class=" m-3" >
-    </div>
-   
-    <div class="col">
-        <img src="https://plus.unsplash.com/premium_photo-1661374909989-d653eaa4f62d?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
-        "style="width: 350px; height: 350px;" class=" m-3" >
-    </div>
-
-<div class="col">
-        <img src="https://images.unsplash.com/photo-1535223289827-42f1e9919769?q=80&w=1374&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
-        " style="width: 350px; height: 350px;" class=" m-3">
-        </div>
-    </div>
 
      
     
